Colaboratory를 통해 생성됨

--- a/Modeling_Diabetes.ipynb
+++ b/Modeling_Diabetes.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## '기계학습' 수업에서의 모델링 실습\n",
+        "## Modeling Practices @ '기계학습' 수업\n",
         "<ul>\n",
         "  <li> Diabetes Dataset 사용 </li>\n",
         "  <li> 코드작성 : 조송현 </li>\n",
@@ -38,6 +38,17 @@
       ],
       "metadata": {
         "id": "BcI87hx34eFY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* [Memo] when it comes to this Assignment : \n",
+        "  - additional task :  \"improving score(R2)\" and \"overcoming Overfitting problem\" at the same time\n",
+        "  - To_do : alter ways of Preprocessing, Trying Cross-validation, Grid Search instead of Random search, Setting hyperparameters  "
+      ],
+      "metadata": {
+        "id": "i6RcnIei6ijk"
       }
     },
     {
