Colaboratory를 통해 생성됨

--- a/Modeling_AlzheimerDiagnosis.ipynb
+++ b/Modeling_AlzheimerDiagnosis.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 기계학습 모델링 제출과제 (2022-05-15) (조송현) "
+        "## 기계학습 모델링 제출과제 (Task1)(2022-05-15)(작성: 조송현) "
       ],
       "metadata": {
         "id": "cIDdJ48yXHA1"
