Colaboratory를 통해 생성됨

--- a/Modeling_WalmartSalesForecast.ipynb
+++ b/Modeling_WalmartSalesForecast.ipynb
@@ -5328,7 +5328,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### !!! (map redering error) folium map as below "
+        "### !!! (map rendering error) folium map as below "
       ],
       "metadata": {
         "id": "Qo8SrYp5jirG"
@@ -5841,7 +5841,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### !!! (map redering error) folium map as below "
+        "### !!! (map rendering error) folium map as below "
       ],
       "metadata": {
         "id": "_VT00hovjJ52"
