--- a/202204_Modeling_Diabetes.ipynb
+++ b/202204_Modeling_Diabetes.ipynb
@@ -128,7 +128,7 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import os\n",
-        "import hashlib\n",
+        "import hashlib # MD5, SHA256 등의 알고리즘으로 문자열을 해싱(hashing)할 때 사용하는 모듈\n",
         "import urllib.request\n",
         "\n",
         "#### Include any librarys you need to import here ###\n",
