--- a/202204_Modeling_Diabetes.ipynb
+++ b/202204_Modeling_Diabetes.ipynb
@@ -131,6 +131,10 @@
         "import hashlib # MD5, SHA256 등의 알고리즘으로 문자열을 해싱(hashing)할 때 사용하는 모듈\n",
         "import urllib.request\n",
         "\n",
+        "# urllib.request는 URL(Uniform Resource Locator)을 가져오기 위한 파이썬 모듈\n", 
+        "# urlopen 함수의 형태로, 매우 간단한 인터페이스를 제공\n",
+        "# urlretrieve 함수를 통해 바로 파일(test.png)에 자료를 입력할 수 있음.\n",
+        "\n",
         "#### Include any librarys you need to import here ###\n",
         "\n",
         "# Python ≥3.5 is required\n",
